# dataset-calendar

./: README.md  dataset.yml  dbt_project.yml  fdl.toml  main.py  pipeline.py  profiles.yml  pyproject.toml
.github/workflows/: deploy.yml  sync.yml
macros/: read_holidays_csv.sql
models/main/mart/: mart_calendar.sql  mart_calendar.yml
models/main/raw/: _schema.yml  raw_holidays.sql
