[project]
name = "dataset-calendar"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.5.0,<1.5.3",
    "boto3>=1.35",
]

[tool.queria]
name = "calendar"
title = "日本の暦データ"
description = "1955年〜2027年の日付スパインに祝日・曜日・和暦・会計年度を付与した日本の暦データ"
cover = "📅"
tags = ["カレンダー", "祝日", "和暦", "日付"]
license = "政府標準利用規約 第2.0版"
license_url = "https://www.cao.go.jp/notice/rule.html"
repository_url = "https://github.com/flo8s/dataset-calendar"
schedule = "yearly"

[tool.queria.schemas.main]
title = "メイン"
